server/app/sass/landingpage.scss
/* GLOBAL STYLES */

@import '_variables.scss';
$colorAccent: #0abab5;
body {
  // font-family: 'Montserrat', sans-serif; //400, 700
  // color: white;
  // background-color: black;
  font-family: 'Roboto', sans-serif; //400,400i,700,900
  color: white;
  background-image: url("/images/shutterstock_315631490_large.jpg");
  background-repeat: no-repeat;
  background-size: content;
  background-position: top center;
  background-color: white;
}

.no-margin {
  margin: 0px;
}

.top-box {
  margin-top: 195px;
}

.main-info {
  background-color: rgba(87, 193, 232, .85);
  text-align: center;
  position: relative;
  margin-top: 0px;
  // max-width: 58%;
  .fs-logo {
    color: #fff;
    max-width: 10%;
    margin-top: 35px;
  }
  .main-info-content {
    img.hunt-logo {
      max-width: 60%;
      margin-top: 9px;
    }
    .nye-logo {
      max-width: 35%;
      margin-top: 44px;
    }
    h3 {
      letter-spacing: 1.4px;
      line-height: 25px;
      font-weight: 700;
      font-size: 29px;
      text-transform: uppercase;
      color: white;
      margin-bottom: 3px;
      margin-top: 15px;
    }
    h3.location {
      margin-top: 10px;
    }
    h3.presents {
      color: $color-primary2;
      font-size: 16px;
      margin-top: -3px;
    }
    h1 {
      font-weight: 700;
      font-size: 130px;
    }
    h6.slogan {
      font-weight: 700;
      font-size: 16px;
      line-height: 26px;
      letter-spacing: 2px;
      text-transform: uppercase;
      margin-bottom: 5px;
      margin-top: 0px;
    }
  }
  .event-info {
    font-weight: 400;
    font-size: 18px;
    margin-top: -16px;
    p {
      color: #004D71;
      font-weight: 700;
      font-size: 14px;
      line-height: 27px;
      margin-bottom: 24px;
    }
    .demo-day-link {
      color: white;
    }
  }
  .main-info-content {
    padding: 2px 45px 130px;
  }
}


/* LOG-IN USING SOCIAL MEDIA */

.social-info {
  background-color: #000;
  position: relative;
  top: -165px;
  padding: 15px 0 5px;
  margin: -16px 60px 320px;
}

.social-info-content {
  padding-left: 53px;
  padding-right: 53px;
  .early-access {
    font-size: 14px;
    text-align: center;
  }
  p.email {
    margin-top: -7px;
    padding-bottom: 11px;
    text-align: center;
    font-size: 14px;
  }
}

.social-logins {
  margin: 3px 0 20px;
  .btn {
    width: 100%;
    margin-bottom: 10px;
    display: inline-block;
    &.facebook {
      background-color: $color-facebook;
      &:hover {
        background-color: lighten($color-facebook, 10);
      }
    }
    &.twitter {
      background-color: $color-twitter;
      &:hover {
        background-color: lighten($color-twitter, 10);
      }
    }
  }
  i {
    padding-right: 10px;
  }
}

.input-field {
  text-transform: uppercase;
}

button {
  margin-bottom: 12px;
  border-radius: 5px;
  &.submit {
    background-color: $color-accent;
    &:hover {
      background-color: darken($color-accent, 10);
    }
  }
}

.tweet-us {
  clear: both;
  p {
    margin-top: 49px;
    text-align: center;
    font-size: 14px;
  }
}

.button-border-radius {
  border-radius: 8px;
}

.signup-button {
  margin-top: 15px;
}

.update-agreement {
  padding-bottom: 15px;
}


/* SUCCESSFULLY LOGGED-IN USING SOCIAL MEDIA */

.thank-you {
  text-align: center;
  padding-top: 18px;
  font-size: 16px;
  margin-bottom: 33px;
}

.fakebook {
  margin-bottom: 33px;
}


/* COUNTDOWN CLOCK */

.landingpage-wrapper {
  margin-top: -45px;
}

.container-fluid {
  width: 100%;
  background-color: $color-primary2;
}

.countdown-clock {
  background-color: $color-primary2;
  .countdown-title {
    text-align: center;
    font-size: 44px;
    text-transform: uppercase;
    color: #CFDB00;
    margin-top: 24px;
    font-weight: 700;
    letter-spacing: 5px;
    margin-bottom: 14px;
  }
  .clock-components {
    text-align: center;
    font-size: 120px;
    margin-top: 20px;
  }
  .clock-unit-label {
    font-size: 18px;
    margin-top: -20px;
    letter-spacing: 5px;
    font-weight: 400;
  }
  .clock-days {
    border-right: 2px solid $color-primary3;
    padding: 8px;
    margin-bottom: 20px;
    padding-bottom: 42px;
  }
  .clock-hours {
    border-right: 2px solid $color-primary3;
    padding: 8px;
    margin-bottom: 20px;
    padding-bottom: 42px;
  }
  .clock-minutes {
    border-right: 2px solid $color-primary3;
    padding: 8px;
    margin-bottom: 20px;
    padding-bottom: 42px;
  }
  .clock-seconds {
    padding: 8px;
    margin-bottom: 20px;
    padding-bottom: 42px;
  }
  .clock-divider {
    vertical-align: text-bottom;
  }
  .tiy-credit {
    color: $color-primary3;
    text-align: center;
    a {
      color: $color-accent;
    }
  }
}


/* FOOTER */

.sponsors {
  background-color: white;
  color: #040404;
  // text-align: center;
  // padding-top: 112px;
  // padding-bottom: 15px;
  .sponsor-info {
    .sponsor-logo-container {
      height: 140px;
      position: relative;
      .sponsor-image {
        max-width: 80%;
        max-height: 90%;
        position: relative;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        margin-top: 10px;
        &.fountain-square {
          max-width: 30%;
        }
      }
    }
    .sponsor-content {
      text-align: center;
      letter-spacing: .75px;
    }
    .social-links {
      i {
        padding: 1px 8px 15px 8px;
        color: #D8D8D8;
        font-size: 28px;
      }
      list-style: none;
      text-align: center;
      li {
        display: inline-block;
        vertical-align: center;
        padding: 5px;
      }
    }
  }
}

h5.address {
  margin-bottom: 20px;
  font-size: 12px;
  font-weight: 400;
  margin-top: 20px;
  color: $color-primary2;
  line-height: 5px;
  a {
    color: $color-primary1;
  }
}


/* MEDIA QUERIES */


/* MEDIA QUERIES : Materialize Breakpoint Desktop Devices 
> 992px */


/* MEDIA QUERIES : Materialize Breakpoint Tablet Devices 
<= 992px */

@media screen and (max-width: 890px) {
  #days,
  #hours,
  #minutes,
  #seconds {
    font-size: 90px !important;
  }
}


/* MEDIA QUERIES : 800 */

@media screen and (max-width: 800px) {
  .main-info {
    .main-info-content {
      h3.location {
        font-size: 18px;
      }
    }
  }
  .social-info {
    margin-bottom: 60px;
  }
}


/* MEDIA QUERIES : iPad <= 768 */

@media screen and (max-width: 768px) {
  body {
    background-image: url("/images/shutterstock_315631490_large.jpg");
    background-size: cover;
  }
  #days,
  #hours,
  #minutes,
  #seconds {
    font-size: 70px !important;
  }
  .social-info {
    margin-left: 0;
    margin-right: 0;
  }
  .main-info {
    .main-info-content {
      padding: 2px 0px 130px;
      h3.location {
        font-size: 18px;
      }
    }
  }
}


/* MEDIA QUERIES : 628 */

@media screen and (max-width: 628px) {
  .clock-unit-label {
    line-height: 2.2;
  }
  .clock-components {
    line-height: 1;
  }
}


/* MEDIA QUERIES : Materialize Breakpoint Mobile Devices <= 600px */

@media screen and (max-width: 600px) {
  #clockdiv {
    font-size: 50px !important;
    text-align: center;
    vertical-align: middle;
  }
  .top-box {
    margin-top: 10px;
  }
  .social-info-content {
    padding: 12px 53px 0 53px;
  }
  .clock-components {
    padding: 0 !important;
    font-size: 60px !important;
  }
  .clock-unit-label {
    font-size: 12px !important;
  }
}


/* MEDIA QUERIES : iPhone 6plus <= 414 */

@media screen and (max-width: 414px) {}


/* MEDIA QUERIES : iPhone 6 <= 375 */

@media screen and (max-width: 375px) {}


/* MEDIA QUERIES : iPhone 5 <= 320 */

@media screen and (max-width: 320px) {
  #top-box-mobile {
    padding: 0px;
  }
  #social-info-mobile {
    padding: 0px;
  }
  .main-info .event-info p {
    font-size: 14px !important;
  }
  .main-info {
    margin-top: 165px;
  }
  .main-info .main-info-content img.hunt-logo {
    max-width: 81%;
    margin-top: 9px;
  }
  .main-info .event-info p {
    font-size: 13px;
    line-height: 23px;
    margin-bottom: 24px;
  }
  .main-info .main-info-content h3 {
    line-height: 25px;
    font-size: 24px;
    margin-bottom: 3px;
    margin-top: 5px;
  }
  .main-info .main-info-content h3.location {
    font-size: 14px;
    margin-top: -2px;
  }
  .thank-you {
    text-align: center;
    padding: 10px 44px 0px;
  }
  .main-info .main-info-content .nye-logo {
    max-width: 51%;
    margin-top: 20px;
  }
  .main-info .main-info-content h6.slogan {
    font-size: 20px;
    line-height: 22px;
    margin-bottom: 18px;
    margin-top: -1px;
  }
  .main-info .main-info-content h3.presents {
    color: #004D71;
    font-size: 14px;
    margin-top: 0px;
  }
  .main-info .main-info-content h3 {
    font-size: 24px;
  }
  .container-fluid,
  .countdown-clock {
    background-color: #004D71;
    margin-top: -103px;
  }
  .row .remove-padding {
    padding: 0px;
  }
  #days,
  #hours,
  #minutes,
  #seconds,
  .clock-divider {
    font-size: 53px !important;
  }
  .top-box {
    margin-top: 0;
  }
  img.fs-logo {
    max-width: 25% !important;
  }
  .clock-components {
    padding: 0 !important;
    margin: 0 !important;
    font-size: 30px !important;
  }
  .countdown-clock .countdown-title {
    font-size: 16px;
    margin-bottom: -16px;
  }
  .sponsor-logo-container {
    height: 100px;
  }
  p {
    font-size: 12px;
    line-height: 22px;
    margin-top: 4px;
    margin-bottom: 30px;
  }
  .social-info {
    background-color: #000;
    position: relative;
    top: -165px;
    margin-bottom: 0;
  }
}

